--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,8 +1,8 @@
 .fundoLogin {
-    background-image: url("https://img.freepik.com/fotos-gratis/rea-de-transferencia-com-icone-ou-simbolo-de-nota-de-papel-de-lista-de-verificacao-na-renderizacao-3d-de-fundo-roxo_56104-1491.jpg?t=st=1708532326~exp=1708535926~hmac=bbce1009483dfbc753b9b809aa0f0b1575c3582abbc43553801076b247722b09&w=360");
-    background-repeat: no-repeat;
-    min-height: 100vh;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-  }
+  background-image: url("https://img.freepik.com/fotos-premium/computador-e-maos-fecham_566707-3684.jpg?w=740");
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+}
